syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.nuxeo.micro.repo.proto";
option java_outer_classname = "NuxeoClientProto";

package NuxeoClient;

// The Session service definition.
service NuxeoCoreSession {
 // Gets a document
 rpc getDocument (DocumentRequest) returns (Document) {}
 rpc createDocument( DocumentCreationRequest ) returns (Document) {}
 rpc updateDocument( Document ) returns (Document) {}
 rpc query( QueryRequest ) returns ( stream QueryResult) {}

}

// The request message containing the user's name.
message DocumentRequest {
 string id= 1;
 string path = 2;
}

// The request message containing the user's name.
message DocumentCreationRequest {
 string path = 1;
 string name = 2;
 Document document = 4;
}

message QueryRequest {
  string nxql = 1;
}

message QueryResult {
  int64 totalCount = 1;
  repeated Document docs = 10;
}

// The response message containing the greetings
message Document {
  string repositoryName = 1;
  string uuid = 2;
  string name = 3;
  string parentPath = 4;
  string type = 5;
  repeated string facets = 6;
  message Schema {
    string name = 1;
    string prefix = 2;
  }

  repeated Schema schema = 7;
  string state = 8;
  string parentRef = 9;
  string changeToken = 10;
  string title = 11;
  int64 lastModified = 12;
  string versionLabel = 13;
  string lockOwner = 14;
  int64 lockCreated = 15;
  bool isCheckedOut = 16;


  message Property {
     enum PropType {
       STRING = 0;
       INT = 1;
       DOUBLE = 2;
       DATE = 3;
       BOOL = 4;
       BLOB = 5;
       COMPLEX = 6;
       BYTE = 7;
     }
    PropType type = 1;
     bool multiple = 2;
    message ScalarProperty {
       oneof value {
         string strValue = 1;
         sint64  intValue = 2;
         double  doubleValue = 3;
         bytes byteValue = 4;
         bool booleanValue = 5;
       }
     }
    message ComplexProperty {
       map<string, Property> complexValue = 1;
     }
    repeated ScalarProperty scalarValue = 3;
     repeated ComplexProperty complexValue = 4;
  }

  map<string, Property> properties = 17;
}